# axump

./: Cargo.toml  README.md  ask-license.rhai  cargo-generate.toml
.github/: dependabot.yml
.github/workflows/: relase.yml
app/: Cargo.toml
app/src/: main.rs
app/src/config/: config.rs
app/src/middleware/: mod.rs  tracing.rs
src/router/: mod.rs
{{project-name}}/: .gitignore  Cargo.toml  LICENSE-MIT  README.md
{{project-name}}/src/middleware/: cors.rs  tracing.rs
{{project-name}}/src/router/: router.rs
