[package]
name = "app"
version = "0.1.0"
edition = "2021"
authors = ["czyt"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7"
tracing-appender = "0.2"
tokio = { version = "1", features = ["full"] }
tower-http= { version = "0.5", features = ["cors", "tracing", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[target.'cfg(target_family = "unix")'.dependencies.openssl]
version = "0.10"
features = ["vendored"]